--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p>Personal Developement</p>
 </div>
 <div id="center">
-    <img src="/Images/main.png" alt="" id="mainimg">
+    <img src="/Images/c1.jpg" alt="" id="mainimg">
     <div class="main-content">
         <h2>Udemy Flash Sale</h2>
         <h2>24 hours to save</h2>
